# mjt-grpc-template

./: Cargo.toml  build.rs  cargo-generate.toml  post-script.rhai  readme.MD
.github/workflows/: release.yml
proto/: {{grpc_service_name}}.proto
src/: lib.rs  main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/db_repositories/test_data/: test_data_repository.rs
src/grpc_server/: mod.rs  server.rs  test_grpc_service.rs
